--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -94,10 +94,13 @@ f_{va04}=1.668(\frac{M_p}{\mjupiter{}})\expy{1/3}\exp{-\frac{M_p}{1.5\mjupiter{}
 \end{equation}
 \end{workout}
 
-\section{Popolazione pianeti gianti}
+\section{Popolazione sintetiche}
 
-envelopcore
-
+%envelopcore
+\begin{figure}
+\includegraphics[]{ma-synth}
+\caption{Punti rossi: pianeti giganti con $M_e/M_c>1$; blu have accreted ices outside iceline while green have accreted solidi refrattarii}
+\end{figure}
 
 {\let\clearpage\relax\let\cleardoublepage\relax
 \chapter{Raffronto popolazione osservata vs sintetiche}
