--- a/seminario.bib
+++ b/seminario.bib
@@ -4,7 +4,7 @@
   journal={The Astrophysical Journal},
   volume={662},
   number={2},
-  pages={1282},
+pages={1282},
   year={2007},
   publisher={IOP Publishing}
 }
@@ -95,6 +95,12 @@
   publisher={IOP Publishing}
 }
 
+@article{mordasini2018planetary,
+  title={Planetary population synthesis},
+  author={Mordasini, Christoph},
+  journal={arXiv preprint arXiv:1804.01532},
+  year={2018}
+}
 
 @article{mayor2011harps,
   title={The HARPS search for southern extra-solar planets XXXIV. Occurrence, mass distribution and orbital properties of super-Earths and Neptune-mass planets},
