--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -7,6 +7,8 @@ Towarddeterminist model of planetary formation iV: effectsof type I migration
 									: accumulation neare iceline
 									: dynamical intaraction and coagulation of multiple rocky embrios (isolation mass, semi-analytic vs n-body)
 									: eccentricity distribution of gas giant
+									
+Theoretical models of planetary system formation: mass vs. semi-major axis	(alibert carron 13)								
 \end{workout}
 
 \section{Modello disco di accrescimento e distribuzione condizioni iniziali}
