result pps figs

--- a/GFMresult.tex
+++ b/GFMresult.tex
@@ -96,10 +96,25 @@ f_{va04}=1.668(\frac{M_p}{\mjupiter{}})\expy{1/3}\exp{-\frac{M_p}{1.5\mjupiter{}
 
 \section{Popolazione sintetiche}
 
-%envelopcore
+
 \begin{figure}
-\includegraphics[]{ma-synth}
-\caption{Punti rossi: pianeti giganti con $M_e/M_c>1$; blu have accreted ices outside iceline while green have accreted solidi refrattarii}
+\includegraphics[width=0.9\textwidth,keepaspectratio]{ma-synth}
+\caption{Da \cite{mordasini2018planetary}. Punti rossi: pianeti giganti con $M_e/M_c>1$; blu have accreted ices outside iceline while green have accreted solidi refrattarii}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=0.9\textwidth,keepaspectratio]{MaLR-freq-synth}
+\caption{Da \cite{mordasini2018planetary}. }
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=0.9\textwidth,keepaspectratio]{giant-Zsynth}
+\caption{Da \cite{mordasini2018planetary}. }
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=0.9\textwidth,keepaspectratio]{envelopecoresynth}
+\caption{Da \cite{mordasini2018planetary}. }
 \end{figure}
 
 {\let\clearpage\relax\let\cleardoublepage\relax
