critical core mass

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -399,6 +399,13 @@ Factors determning orbital spacing: pg 229, earth formation (chambers 01, raymon
 \chapter{Evoluzione struttura planetaria: accrescimento e fase isolata.}
 }
 
+\begin{workout}[Critical core mass]
+From toward deterministic
+\begin{equation}
+M_{c,crit}\approx10(\frac{\dot{M}_c}{\num{e-6}\mearth{}\si{\per\year}})\expy{0.2-0.3}(\frac{\kappa}{\SI{1}{\square\cm\per\gram}})\expy{0.2-0.3}\mearth{}
+\end{equation}•
+\end{workout}
+
 Se il core \'e sufficientemente massiccio lega il gas presente nelle disco: 
 Seguendo \cite{rafikov2006atmospheres}.
 
