--- a/seminario.bib
+++ b/seminario.bib
@@ -84,6 +84,17 @@ pages={1282},
   publisher={Elsevier}
 }
 
+@article{weidenschilling1977distribution,
+  title={The distribution of mass in the planetary system and solar nebula},
+  author={Weidenschilling, SJ},
+  journal={Astrophysics and Space Science},
+  volume={51},
+  number={1},
+  pages={153--158},
+  year={1977},
+  publisher={Springer}
+}
+
 @article{howard2012planet,
   title={Planet occurrence within 0.25 AU of solar-type stars from Kepler},
   author={Howard, Andrew W and Marcy, Geoffrey W and Bryson, Stephen T and Jenkins, Jon M and Rowe, Jason F and Batalha, Natalie M and Borucki, William J and Koch, David G and Dunham, Edward W and Gautier III, Thomas N and others},
