few word about solar system

--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -1,12 +1,16 @@
 {\let\clearpage\relax\let\cleardoublepage\relax
 \chapter{Sistema solare}
 }
+Il sistema solare \'e stato a lungo il solo banco di prova delle teorie di formazione planetaria. Inoltre \'e possibile avere riferimenti temporali tramite l'analisi chimica di meteoriti, analisi diretta, e altri corpi minori, tramite spettroscopia o missioni spaziali. In particolare considero una stima inferiore della massa del disco protosolare, 
 
 % trim={5cm 0 0 0},clip
 
 \begin{workout}[Sistema solare - andamento densit\'a e composizione]
 asteroid mercury mars mass depletion pg 298
 farinella pg513,weidenschilling 77,
+\begin{figure}[!t]
+\includegraphics[trim={0cm 0 0 0},clip, width=0.9\textwidth]{Snebuladensity}\label{fig:Snebuladensity}
+\end{figure}•
 \end{workout}
 
 \begin{workout}[et\'a corpi sistema solare (age and chronology)]
