inizio parte modelli planetari (solar): g-multipole, core mass

--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -1,9 +1,59 @@
+% trim={5cm 0 0 0},clip
+
 {\let\clearpage\relax\let\cleardoublepage\relax
 \chapter{Sistema solare}
 }
-Il sistema solare \'e stato a lungo il solo banco di prova delle teorie di formazione planetaria. Inoltre \'e possibile avere riferimenti temporali tramite l'analisi chimica di meteoriti, analisi diretta, e altri corpi minori, tramite spettroscopia o missioni spaziali. In particolare considero una stima inferiore della massa del disco protosolare, 
+Il sistema solare \'e stato a lungo il solo banco di prova delle teorie di formazione planetaria. Inoltre \'e possibile avere riferimenti temporali tramite l'analisi chimica di meteoriti, analisi diretta, e altri corpi minori, tramite spettroscopia o missioni spaziali. In particolare considero una stima inferiore della massa del disco protosolare e i risultati dei modelli dei pianeti giganti.
 
-% trim={5cm 0 0 0},clip
+L'et\'a del sole \'e definata come tempo in sequenza principale; tecniche eliosismologiche e radiologiche determinano un'et\'a di \SI{4.57+-0.11}{\giga\year} e \SI{4.57+-0.07}{\giga\year}.
+La Terra si \'e formata completamente circa \SI{100}{\mega\year} dopo i meteoriti.
+
+Per stimare la massa del disco protoplanetario \cite{weidenschilling1977distribution} ha considerato la massa presente nei pianeti e nella fascia asteroidale arricchita di H/He per avere composizione solare: distribuendo questa massa in un anello di spessore proporzionale al raggio di Hill e centrato sulle orbite, l'andamento della densit\'a superficiale \'e mostrato in \ref{fig:Snebuladensity}, $\sigma\propto r\expy{-3/2}$.
+
+
+\begin{workout}[Cosa dire dei modelli planetarii: core giganti gassosi: modelli planetari e raffronto isolation mass in MMSN]
+parte relativa ai momenti multipolo gravitazionale. 
+In hydrostatic equilibrium the external gravitational potential is
+\begin{equation}
+V(r,\theta)=\frac{GM_p}{r}[1-\sum_1^{\infty}(\frac{R_+}{r})^{2n}J_{2n}P_{2n}(\theta)]
+\end{equation}
+
+
+\begin{figure}[!ht]
+\begin{subfigure}[b]{0.47\textwidth}
+\centering
+\includegraphics[trim={0cm 0 0 0},clip, width=0.9\textwidth]{JScomp}
+\caption{Da \cite{}}\label{fig:JScomp}
+\end{subfigure}
+~
+\begin{subfigure}[b]{0.47\textwidth}
+\centering
+\includegraphics[trim={0cm 0 0 0},clip,width=0.9\textwidth]{UNcomp}\label{fig:UNcomp}
+\caption{Da \cite{UNcomp}.}
+\end{subfigure}
+\end{figure}
+
+
+\end{workout}
+
+\begin{workout}[Earth age]
+pg 297; allegre 95
+\end{workout}
+
+\begin{workout}[Planetesimal and late heavy bombardament]
+pg 302
+Introdurre planetesimi: migrazione. 
+debris disk: pg 222
+\end{workout}
+
+\begin{workout}[Stellar age: isochrone fitting]
+Jorgensen Lindegren 05
+\end{workout}
+
+\begin{workout}[et\'a corpi sistema solare (age and chronology)]
+age of the sun: $4.57Gyr$ (Bahcall95)
+CAI: $4567Gyr$ +3Myr chondrule
+\end{workout}
 
 \begin{workout}[Sistema solare - andamento densit\'a e composizione]
 asteroid mercury mars mass depletion pg 298
@@ -13,21 +63,13 @@ farinella pg513,weidenschilling 77,
 \end{figure}•
 \end{workout}
 
-\begin{workout}[et\'a corpi sistema solare (age and chronology)]
-age of the sun: $4.57Gyr$ (Bahcall95)
-CAI: $4567Gyr$ +3Myr chondrule
+\begin{workout}[atmospher composition and photoevaporation]
+pg 256: interior and atmosphere, 293 solar system, 143 properties of transit
 \end{workout}
+
 
 \begin{workout}[Noble gas enrichment]
 FORMATION OF GIANT PLANETS – AN ATTEMPT IN MATCHING OBSERVATIONAL CONSTRAINTS
-\end{workout}
-
-\begin{workout}[core giganti gassosi: modelli planetari e raffronto isolation mass in MMSN]
-
-\end{workout}
-
-\begin{workout}[atmospher composition and photoevaporation]
-pg 256: interior and atmosphere, 293 solar system, 143 properties of transit
 \end{workout}
 
 \begin{workout}[Degree of super-adiabaticity: Struttura interna (assimption for pre-runaway accretion)]
@@ -66,6 +108,7 @@ Uranus: tilt due to collision or migration: Bergstralh 91 or Bou\'e Laskar 10.
 Non of obliquity of terrestrial planet are belived primordial (secular orbit perturbation)+tidal dissipation.
 Effects of inhomogenous infall on obliquity (tremaine 91, bate 10)
 \end{workout}
+
 
 {\let\clearpage\relax\let\cleardoublepage\relax
 \chapter{Alcune caratteristiche della popolazione di esopianeti}
@@ -183,7 +226,11 @@ wright 09: multiplanet system tend to havelower eccentricity,
 Limbach turner 14: $e_m\propto N\expy{-1.2}$.
 planet around metal rich star have higher e (dawson, murray-clay 13)
 smaller planets tend to have lower e (hogg 10 raccomanded modelling e distro on basis of Bayesian analysis)
-\end{workout}	
+\end{workout}
+
+
+\section{Modelli planetarii}
+
 
 \section{Popolazione esopianeti rilevati tramite transito}
 
