--- a/seminario.bib
+++ b/seminario.bib
@@ -74,6 +74,17 @@ pages={1282},
   publisher={EDP Sciences}
 }
 
+@article{baraffe2009physical,
+  title={The physical properties of extra-solar planets},
+  author={Baraffe, Isabelle and Chabrier, Gilles and Barman, Travis},
+  journal={Reports on Progress in Physics},
+  volume={73},
+  number={1},
+  pages={016901},
+  year={2009},
+  publisher={IOP Publishing}
+}
+
 @article{kley2012planet,
   title={Planet-disk interaction and orbital evolution},
   author={Kley, W and Nelson, RP},
