--- a/appendice.tex
+++ b/appendice.tex
@@ -1,3 +1,34 @@
+\section{Velocit\'a radiale}
+
+
+\begin{workout}[Radial velocity: keplerian observables (Appendice RV)]
+La coordinata z della stella $z=r(t)\sin{i}\sin{(\omega+\nu)}$ e per la velocit\'a radiale
+\begin{align}
+&v_r=\dot{z}=K[\cos{(\omega+\nu)}+e\cos{\omega}]\\
+&K=\frac{2\pi}{P}\frac{a_*\sin{i}}{(1-e^2)\expy{1/2}}=(\frac{2\pi G}{P})\expy{1/3}\frac{M_p\sin{i}}{(M_p+M_*)\expy{2/3}}\frac{1}{(1-e^2)\expy{1/1}}
+\end{align}
+Le osservabili $e$, $P$, $t_p$, $\omega$, $K=f(a,e,P,i)$ sono fittate per ogni pianeta.
+La velocit\'a radiale della stella \'e
+\begin{equation}
+v_r(t)=K[\cos{(\omega+\nu(t)}+e\cos{\omega}]+\gamma+d(t-t_0)
+\end{equation}
+Per sistemi multipli consideriamo la sovrapposizione lineare di $n_p$ termini \eqref{eq:vrsignal}: viene sottratto il segnale Kepleriano dominante fino a che resta solo rumore.
+\end{workout}
+
+\begin{workout}[Radial velocity: keplerian observables (Appendix RV)]
+La coordinata z della stella $z=r(t)\sin{i}\sin{(\omega+\nu)}$ e per la velocit\'a radiale
+\begin{align}
+&v_r=\dot{z}=K[\cos{(\omega+\nu)}+e\cos{\omega}]\\
+&K=\frac{2\pi}{P}\frac{a_*\sin{i}}{(1-e^2)\expy{1/2}}=(\frac{2\pi G}{P})\expy{1/3}\frac{M_p\sin{i}}{(M_p+M_*)\expy{2/3}}\frac{1}{(1-e^2)\expy{1/1}}
+\end{align}
+Le variabili $e$, $P$, $t_p$, $\omega$, $K=f(a,e,P,i)$ sono fittate per ogni pianeta.
+La velocit\'a radiale della stella \'e
+\begin{equation}
+v_r(t)=K[\cos{(\omega+\nu(t)}+e\cos{\omega}]+\gamma+d(t-t_0)
+\end{equation}
+\end{workout}
+
+
 \section{Altre tecniche osservative}
 \begin{workout}[Astrometry]
 L'ellisse percorsa dalla stella attorno al baricentro stella pianeta ha ampiezza angolare
