cf+description mass-period

--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -115,7 +115,7 @@ Effects of inhomogenous infall on obliquity (tremaine 91, bate 10)
 }
 
 \begin{wrapfigure}[13]{l}{0.45\textwidth}
-\includegraphics[trim={0cm 0 0 0},clip, width=0.9\textwidth]{obsMa}\label{fig:Maplot}
+\includegraphics[trim={0cm 0 0 0},clip, width=0.4\textwidth]{obsMa}\label{fig:Maplot}
 \caption{Diagramma massa-distanza degli esopianeti in ''The extrasolar planet encyclopedia''. Rosso, celeste, magenta e verde sono pianeti rivelati tramite RV, T, osservazione diretta e microlensing. Da \cite{mordasini2018}.}
 \end{wrapfigure}
 
@@ -152,6 +152,14 @@ dove $\sigma$ tiene conto errori strumentali e rumore stellare.
 \caption{Diagramma massa-periodo: frazione di stelle che ospitano pianeta con caratteristiche nella regione evidenziata. Da sinistra a destra: $P<10\si{\year}$ e $M>50\mearth{}$, $P<1\si{\year}$ e $M>3-100\mearth{}$, $P<50\si{\day}$ e $M=1-3/3-10/10-30/30-100/100-300/300-1000$. Da \cite{mayor2011harps}}
 \end{subfigure}
 \end{figure}
+
+Alcune caratteristiche della distribuzione dei pianeti osservati (da \cite{mayor2011harps}):
+\begin{itemize}
+\item Il picco della densit\'a di super-terre si sposta da $6\mearth{}$ a $10\mearth{}$ per periodi da \SI{10}{\day} a \SI{100}{day}
+%\item Non sono osservati pianeti fino a $50\mearth{}$ con $P>\SI{1000}{\day}$
+\item il pianeta gassoso pi\'u massiccio aumenta da $1\mjupiter{}$ a $15\mjupiter{}$ passando da $P\approx\SI{1}{\day}$ a $P\approx\SI{15}{\year}$.
+\end{itemize}
+
 
 
 \begin{workout}[dtectability and selection effects (pg 14)]
